branches/wip/Archive/81dbf45d3b491445c36254b8beba8df3-d6c803482d553f395422ddf5510f4bb0/output
+ g++ -std=c++11 -O2 -Wall -Wextra -pedantic -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:21:17: error: cannot convert ‘a<int>’ to ‘const base*’ for argument ‘1’ to ‘void f(const base*)’
     f(a<int>(10));
                 ^
